@@ -2,9 +2,12 @@ package com.library.api;
 
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
+
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
+
 
 public class GoogleBooksAPI {
 
@@ -17,10 +20,79 @@ public class GoogleBooksAPI {
  *
  * @param title The title of the book for which to fetch the ISBN.
  */
-    public static void fetchIsbnByTitle(String title) {
+
+    // BookDetails class to hold book information
+    public static class BookDetails {
+        private String title;
+        private String[] authors;
+        private String publisher;
+        private String[] categories;
+        private String datePublished;
+        private String isbn;
+
+        public BookDetails(String title, String[] authors, String publisher, String[] categories, String isbn, String datePublished) {
+            this.title = title;
+            this.authors = authors;
+            this.publisher = publisher;
+            this.categories = categories;
+            this.isbn = isbn;
+            this.datePublished = datePublished;
+        }
+
+        // Getters
+        public String getTitle() {
+            return title;
+        }
+
+        public String[] getAuthors() {
+            return authors;
+        }
+
+        public String getPublisher() {
+            return publisher;
+        }
+
+        public String[] getCategories() {
+            return categories;
+        }
+
+        public String getIsbn() {
+            return isbn;
+        }
+
+        public String getDatePublished() {
+            return datePublished;
+        }
+
+        // To String for easy display
+        @Override
+        public String toString() {
+            return "Title: " + title + "\n" +
+                   "Authors: " + String.join(", ", authors) + "\n" +
+                   "Publisher: " + publisher + "\n" +
+                   "Categories: " + String.join(", ", categories) + "\n" +
+                   "Date Published: " + datePublished;
+        }
+    }
+
+    public static BookDetails fetchBookDetails(String isbnOrTitle, String type) {
+        System.out.println(isbnOrTitle + " " + type);
+        String urlString;
+
+        if (type.equals("isbn")) {
+            if (isbnOrTitle.contains("-")) {
+                isbnOrTitle.replace("-", "");
+            }
+            urlString = "https://www.googleapis.com/books/v1/volumes?q=isbn:" + isbnOrTitle;
+        } else if (type.equals("title")) {
+            urlString = "https://www.googleapis.com/books/v1/volumes?q=intitle:" + isbnOrTitle;
+        } else {
+            return null;
+        }
+
         try {
-            String urlString = "https://www.googleapis.com/books/v1/volumes?q=intitle:" + title.replace(" ", "+");
-            URL url = new URL(urlString);
+            URI uri = new URI(urlString);
+            URL url = uri.toURL();
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
             connection.setRequestMethod("GET");
             connection.setConnectTimeout(5000);
@@ -32,27 +104,43 @@ public class GoogleBooksAPI {
             if (response.has("items")) {
                 JsonObject bookInfo = response.getAsJsonArray("items").get(0).getAsJsonObject().getAsJsonObject("volumeInfo");
                 
-                // Get ISBN
-                JsonObject industryIdentifiers = bookInfo.getAsJsonArray("industryIdentifiers").get(0).getAsJsonObject();
-                String isbn13 = industryIdentifiers.get("identifier").getAsString(); // ISBN 13
-                System.out.println("ISBN 13: " + isbn13);
+                // Get book title
+                String title = bookInfo.get("title").getAsString();
                 
-                // You can also fetch ISBN 10 if needed
-                String isbn10 = bookInfo.getAsJsonArray("industryIdentifiers").size() > 1 ? 
-                                 bookInfo.getAsJsonArray("industryIdentifiers").get(1).getAsJsonObject().get("identifier").getAsString() 
-                                 : null;
-                if (isbn10 != null) {
-                    System.out.println("ISBN 10: " + isbn10);
+                // Get authors
+                String[] authors = new String[bookInfo.getAsJsonArray("authors").size()];
+                for (int i = 0; i < authors.length; i++) {
+                    authors[i] = bookInfo.getAsJsonArray("authors").get(i).getAsString();
                 }
+                
+                // Get publisher
+                String publisher = bookInfo.has("publisher") ? bookInfo.get("publisher").getAsString() : "N/A";
+                
+                // Get categories
+                String[] categories = bookInfo.has("categories") ? new String[bookInfo.getAsJsonArray("categories").size()] : new String[0];
+                for (int i = 0; i < categories.length; i++) {
+                    categories[i] = bookInfo.getAsJsonArray("categories").get(i).getAsString();
+                }
+
+                // Get isbn
+                String isbn = bookInfo.has("industryIdentifiers") ? bookInfo.getAsJsonArray("industryIdentifiers").get(0).getAsJsonObject().get("identifier").getAsString() : "N/A";
+                
+                // Get date published
+                String datePublished = bookInfo.has("publishedDate") ? bookInfo.get("publishedDate").getAsString() : "N/A";
+                
+                // Return a BookDetails object
+                return new BookDetails(title, authors, publisher, categories, isbn, datePublished);
             } else {
-                System.out.println("No results found for book title: " + title);
+                System.out.println("No results found.");
+                return null;
             }
         } catch (Exception e) {
             e.printStackTrace();
+            return null;
         }
     }
 
-    public static void main(String[] args) {
-        fetchIsbnByTitle("Java Programming");  // Example title
-    }
+
+
+
 }
